View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025578 | Community | OCCT:Modeling Algorithms | public | 2014-12-09 15:48 | 2015-05-14 15:32 |
Reporter | shoogen | Assigned To | bugmaster | ||
Priority | normal | Severity | crash | ||
Status | closed | Resolution | fixed | ||
Platform | Linux | OS | Debian 6.0 | ||
Product Version | 6.8.0 | ||||
Target Version | 6.9.0 | Fixed in Version | 6.9.0 | ||
Summary | 0025578: SIGSEGV in BRepSweep_Rotation in case of singularities | ||||
Description | Revolving a sphere segment crashes OCCT. The result would be invalid, of course. | ||||
Steps To Reproduce | pload MODELING psphere Sphere 5 0 90 90 explode Sphere F revol rr Sphere_1 0 0 0 0 0 1 360 #SIGSEGV revol rr Sphere_1 0 0 0 1 0 0 90 #SIGSEGV | ||||
Additional information and documentation updates | versions tested: 6.7.0 (probably OCE) 6.8.1.dev-c0bd0de (master of 2014-12-05) Program received signal SIGSEGV, Segmentation fault. 0x00007fff74c2246e in BRepSweep_Rotation::IsInvariant (this=0x7fffffffaec8, aGenS=...) at occt/src/BRepSweep/BRepSweep_Rotation.cxx:853 853 Handle(Standard_Type) TheType = C->DynamicType(); | ||||
Tags | No tags attached. | ||||
Test case number | bugs modalg_5 bug25578 | ||||
|
Branch CR25578 has been created by azv. SHA-1: 1fa0121d7fe98dc89c078cfa4e5aa64fe4d0e0f2 Detailed log of new commits: Author: azv Date: Tue Jan 13 17:44:38 2015 +0300 0025578: SIGSEGV in BRepSweep_Rotation in case of singularities Eliminating degenerated edges |
|
Branch CR25578 is ready for review |
|
The lines 835-840 are extra. They involve calling to BRep_Tool::Curve, and the same call will be done in IsInvariant method. |
|
Dear Mikhail, I'm not sure that lines 835-840 are extra, because IsInvariant() will return a result for the edge without 3D curve based on invariance of its vertices. But the method HasShape() verifies if the edge has a geometrical entity. In case of deciding lines 835-840 unuseful, we will still obtain exception on the second check: > revol rr Sphere_1 0 0 0 1 0 0 90 |
|
Branch CR25578 has been updated forcibly by azv. SHA-1: 8504ee8fb307e4e3aa49fd840f4fbea27b38faaa |
|
Reviewed. |
|
Branch will be tested with CR25706_2. |
|
Rise CR25706_2. |
|
Branch CR25578 has been deleted by inv. SHA-1: 8504ee8fb307e4e3aa49fd840f4fbea27b38faaa |
Date Modified | Username | Field | Change |
---|---|---|---|
2014-12-09 15:48 | shoogen | New Issue | |
2014-12-09 15:48 | shoogen | Assigned To | => msv |
2015-01-13 10:06 | azv | Assigned To | msv => azv |
2015-01-13 10:06 | azv | Status | new => assigned |
2015-01-13 17:45 | git | Note Added: 0036010 | |
2015-01-13 17:47 | azv | Note Added: 0036011 | |
2015-01-13 17:47 | azv | Assigned To | azv => msv |
2015-01-13 17:47 | azv | Status | assigned => resolved |
2015-01-14 18:07 | msv | Note Added: 0036065 | |
2015-01-14 18:07 | msv | Assigned To | msv => azv |
2015-01-14 18:07 | msv | Status | resolved => assigned |
2015-01-15 08:03 | azv | Note Added: 0036077 | |
2015-01-15 08:03 | azv | Assigned To | azv => msv |
2015-01-15 08:03 | azv | Status | assigned => feedback |
2015-01-15 10:44 | git | Note Added: 0036084 | |
2015-01-15 10:44 | azv | Status | feedback => resolved |
2015-01-15 11:27 | msv | Note Added: 0036087 | |
2015-01-15 11:27 | msv | Assigned To | msv => bugmaster |
2015-01-15 11:27 | msv | Status | resolved => reviewed |
2015-01-21 11:50 | apn | Assigned To | bugmaster => apn |
2015-01-21 13:07 | apn | Note Added: 0036314 | |
2015-01-21 18:53 | apn | Test case number | => bugs modalg_5 bug25578 |
2015-01-26 16:18 | apn | Note Added: 0036658 | |
2015-01-26 16:18 | apn | Assigned To | apn => bugmaster |
2015-01-26 16:18 | apn | Status | reviewed => tested |
2015-01-26 16:18 | apn | Target Version | => 6.9.0 |
2015-01-30 14:00 | bugmaster | Changeset attached | => occt master 79186c39 |
2015-01-30 14:00 | bugmaster | Status | tested => verified |
2015-01-30 14:00 | bugmaster | Resolution | open => fixed |
2015-03-18 13:34 | git | Note Added: 0038530 | |
2015-05-14 15:29 |
|
Status | verified => closed |
2015-05-14 15:32 |
|
Fixed in Version | => 6.9.0 |