0025578: SIGSEGV in BRepSweep_Rotation in case of singularities

Eliminating degenerated edges